src/main/java/com/example/gominbreakbackend/global/error/exception/GominBreakException.java
package com.example.gominbreakbackend.global.error.exception;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class GominException extends RuntimeException{

}
